@@ -15,6 +15,7 @@
 * Fixed the HTML for bulk capability removal and improved styling.
 * Removed some instances of unnecessary translations.
 * Supplemented several instances of missing code docs.
+* Fixed selected capabilities voided when creating a group failed.
 
 = 2.17.0 =
 * WordPress 6.1 compatible.
